ensure that free form content is above dashboard in columns mode (note still broken in multi-page mode)

--- a/inst/rmarkdown/templates/flex_dashboard/resources/flexdashboard.css
+++ b/inst/rmarkdown/templates/flex_dashboard/resources/flexdashboard.css
@@ -63,7 +63,7 @@ body hr {
   display: flex;
 }
 
-.dashboard-row-orientation {
+.dashboard-page-wrapper, .dashboard-row-orientation {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
